--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.12.4",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
